fix(scss): Change month-view header text-overflow to ellipsis
fixes #59

--- a/scss/month-view.scss
+++ b/scss/month-view.scss
@@ -10,6 +10,10 @@
 
   .cal-header .cal-cell {
     padding: 5px 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: block;
+    white-space: nowrap;
   }
 
   .cal-cell-row .cal-cell:hover,
